# Physical-AI-Humanoid-Robotics-Book--vercel-

./: .gitignore  CHATWIDGET_FIX.md  DEMO_GUIDE.md  DEPLOYMENT.md  FRONTEND_FIX.md  QUICKSTART.md  QUICK_START.md  README.md  TESTING_GUIDE.md  VALIDATION_CHECKLIST.md  init_db.py  start-backend.ps1  test-backend.ps1  test-chat-simple.ps1  test_chat_api.py  test_phase7_validation.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VALIDATION_REPORT.md  __init__.py  agent.py  api.py  chunking.py  db.py  deployment.py  embedding.py  init_db.py  main.py  models.py  pyproject.toml  quickstart_validation.py  requirements.txt  retrieve.py  storage.py  utils.py  validate_agent.py
backend/AgentSDK_documentation/: agent.md  context_management.md  guide.md  litellm_model.md  models.md  quick_start.md  runner.md  tools.md
backend/tests/: conftest.py  test_agent.py  test_agent_integration.py  test_integration_retrieve.py  test_retrieve.py
backend/tests/fixtures/: sample.md
frontend/: .env  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
frontend/docs/: intro.mdx  references.mdx
history/adr/: 001-groq-llm-provider-selection.md
specs/001-humanoid-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-content-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-retrieve-textbook-content/: data-model.md  plan.md  tasks.md  (+3 more)
(+146 files in other folders)
